# GoodJob-AIMockInterview-Rebuild

./: .gitignore  CLAUDE.md
backend/: app.py  pyproject.toml
backend/src/: __main__.py  app.py  config.py  database.py  main.py
backend/src/core/: auth.py
backend/src/models/: user.py
backend/src/routers/: interview.py  test.py  webhooks.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20260102110833_create_users_table.sql
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/apis/: api.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: AiInterviewInfoCard.tsx  AiInterviewInfoSection.tsx
frontend/src/app/select/: page.tsx
frontend/src/app/select/_apis/: job-post-api.ts  resume-api.ts
frontend/src/app/select/_hooks/: useResumeUpload.ts
frontend/src/components/: DevTestLoader.tsx
frontend/src/constants/: config.ts
frontend/src/providers/: get-query-client.ts  providers.tsx
frontend/src/utils/: debug-auth.ts  dev-test.ts
