[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.16",
    "certifi>=2025.11.12",
    "fastapi>=0.122.0",
    "google-cloud-speech>=2.34.0",
    "google-cloud-storage>=3.7.0",
    "google-cloud-texttospeech>=2.33.0",
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.0.0",
    "librosa>=0.11.0",
    "pgvector>=0.4.1",
    "playwright>=1.57.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "pyjwt[crypto]>=2.10.1",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sqlmodel>=0.0.27",
    "supabase>=2.25.0",
    "svix>=1.84.1",
    "uvicorn>=0.38.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
